basic styling for the login and register forms. Tweaks to the field component and formState to allow for multiple classes and clearing the form inputs.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,4 +7,8 @@ html, body {
     min-width: 100%;
 }
 
-#root {width: inherit; height: inherit;}
+#root {
+    width: inherit; 
+    height: inherit;
+    position: relative;
+}
