--- a/client/src/components/forms/forms.css
+++ b/client/src/components/forms/forms.css
@@ -1,24 +1,22 @@
 .form-wrap {
     width: 85%;
-    margin: 0 auto;
+    margin: 10% auto;
+    height: 100%;
 }
 
 .form-wrap h1 {
     width: 100%;
-    height: auto;
     text-align: center;
-    font-size: 250%;
-    color: orange
+    font-size: 180%;
 }
 
 .form {
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
-    height: auto;
-    background-color: lightgreen
+    height: 80%;
 }
 
 .submit-button {
@@ -26,6 +24,39 @@
     height: auto;
     font-size: 120%;
     text-align: center;
-    background-color: red;
+    background-color: black;
     color: white;
+}
+
+.form-section {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+}
+
+.field {
+    display: flex;
+    flex-direction: column;
+    justify-content: center
+}
+
+.field label {
+    width: 100%;
+    text-align: center;
+    font-size: 150%;
+    background-color: black;
+    color: white;
+}
+
+.field input {
+    height: 50px;
+    width: 100%;
+    text-align: center;
+    font-size: 120%;
+    margin: 0;
+    border: none;
+}
+
+.field input:focus {
+    outline: none;
 }
