--- a/client/src/components/headers/headers.css
+++ b/client/src/components/headers/headers.css
@@ -1,7 +1,16 @@
-.main-header {width: 100%; height: 15%}
+.main-header {
+    width: 100%; 
+    height: 10%; 
+    background-color: black;
+    text-align: right;
+}
 
 .header-a {
-    font-size: 155%;
+    font-size: 125%;
     font-weight: 800;
-    text-decoration: none
+    text-decoration: none;
+}
+
+.header-a:active, .header-a:visited {
+    color: white;
 }
