--- a/client/src/components/forms/forms.css
+++ b/client/src/components/forms/forms.css
@@ -16,16 +16,18 @@
     flex-direction: column;
     justify-content: space-evenly;
     width: 100%;
-    height: 80%;
+    height: 95%;
 }
 
 .submit-button {
-    width: 200px;
-    height: auto;
-    font-size: 120%;
+    width: 100px;
+    font-size: 110%;
+    height: 30px;
     text-align: center;
     background-color: black;
     color: white;
+    align-self: center;
+    outline: none;
 }
 
 .form-section {
@@ -37,7 +39,9 @@
 .field {
     display: flex;
     flex-direction: column;
-    justify-content: center
+    align-content: center;
+    justify-content: space-evenly;
+    width: 100%;
 }
 
 .field label {
@@ -53,7 +57,6 @@
     width: 100%;
     text-align: center;
     font-size: 120%;
-    margin: 0;
     border: none;
 }
 
@@ -63,7 +66,11 @@
 
 .field-error {
     width: 100%;
-    height: 40px;
     color: red;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-around;
+    font-size: 90%;
 }
